standardize the menu item button usage with text keys and actions

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -389,13 +389,23 @@
   "feature-flags.details.inclusions.card.title.text": "Include Lists",
   "feature-flags.details.inclusions.include-all.toggle.text": "Include All",
   "feature-flags.details.inclusions.card.subtitle.text": "Define Include lists for this feature flag.",
+  "feature-flags.details.inclusions-modal.import-list.menu-item.text": "Import Include List",
+  "feature-flags.details.inclusions-modal.export-lists.menu-item.text": "Export All Include Lists",
   "feature-flags.details.add-include-list.button.text": "Add Include List",
   "feature-flags.details.exclusions.card.no-data-row.text": "No exclude lists defined. No participants will be excluded from the included lists.",
   "feature-flags.details.exclusions.card.title.text": "Exclude Lists",
   "feature-flags.details.exclusions.card.subtitle.text": "Define Exclude lists for this feature flag.",
+  "feature-flags.details.exclusions-modal.import-list.menu-item.text": "Import Exclude List",
+  "feature-flags.details.exclusions-modal.export-lists.menu-item.text": "Export All Exclude Lists",
   "feature-flags.details.exposures.card.title.text": "Exposures",
   "feature-flags.details.exposures.card.subtitle.text": "View total exposures for the feature flag during the specific period.",
   "feature-flags.details.add-exclude-list.button.text": "Add Exclude List",
+  "feature-flags.details.menu-button.edit-flag.text": "Edit Feature Flag",
+  "feature-flags.details.menu-button.duplicate-flag.text": "Duplicate Feature Flag",
+  "feature-flags.details.menu-button.export-flag-design.text": "Export Feature Flag Design",
+  "feature-flags.details.menu-button.email-data.text": "Email Feature Flag Data",
+  "feature-flags.details.menu-button.delete-flag.text": "Delete Feature Flag",
+  "feature-flags.details.menu-button.archive.text": "Archive Feature Flag",
   "feature-flags.table-variation-type.text": "Variation type",
   "feature-flags.overview.flag-variation-type.text": "Flag Variation Type",
   "feature-flags.overview.flag-variation-type-error.text": "Please choose a flag variation type",
