--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -373,8 +373,10 @@
   "feature-flags.no-matching-flags.text": "No matching feature flags found.",
   "feature-flags.delete-flag.message.text": "Type the name of feature flag to confirm deletion:",
   "feature-flags.delete-flag.input-placeholder.text": "Feature flag name",
+  "feature-flags.import-flag-modal.title.text": "Import Feature Flag",
   "feature-flags.import-flag-modal.compatibility-description.incompatible.text": "This JSON file cannot be imported because it lacks required properties or it incorrectly formatted for the feature flag. Please ensure it is the correct file.",
   "feature-flags.import-flag-modal.compatibility-description.warning.text": "This JSON file can be imported, but it may contain outdated or missing properties/features. Please review the feature flag details post-import.",
+  "feature-flags.import-flag-list-modal.title.text": "Import Feature Flag List",
   "feature-flags.import-flag-list-modal.compatibility-description.incompatible.text": "This JSON file cannot be imported because it lacks required properties or it incorrectly formatted for the feature flag list. Please ensure it is the correct file.",
   "feature-flags.import-flag-list-modal.compatibility-description.warning.text": "This JSON file can be imported, but it may contain outdated or missing properties/features. Please review the feature flag list details post-import.",
   "feature-flags.upsert-flag-modal.name-hint.text": "The name for this feature flag.",
@@ -482,6 +484,10 @@
   "segments.global-members.segments-count-members-error.text": "Please have at least 1 valid member to move forward",
   "segments.import-segment.text": "IMPORT SEGMENT",
   "segments.import-segment.message.text": "Select the JSON file(s) to import segments:",
+  "segments.import-segment-modal.title.text": "Import Segment",
+  "segments.import-segment-modal.message.text": "The Segment JSON file should include the required properties for it to be imported. The segment will be created with the provided data.",
+  "segments.import-segment-modal.compatibility-description.incompatible.text": "This JSON file cannot be imported because it lacks required properties or it incorrectly formatted for the segment. Please ensure it is the correct file.",
+  "segments.import-segment-modal.compatibility-description.warning.text": "This JSON file can be imported, but it may contain outdated or missing properties/features. Please review the segment details post-import.",
   "segments.import-segment.error.message.text": "Invalid Segment JSON data",
   "segments.export-all-lists-design.confirmation-text.text": "Are you sure you want to export all lists (JSON)?",
   "segments.segment-experiment-list-title.text": "Used by ({{ numberOfUses }}) ",
