update the segments names also

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -467,6 +467,10 @@
   "segments.overview.export-segment.text": "Export Segment",
   "segments.overview.segment-description.text": "Description",
   "segments.overview.segment-app-context.text": "App Context",
+  "segments.details.menu-button.edit-segment.text": "Edit Segment",
+  "segments.details.menu-button.duplicate-segment.text": "Duplicate Segment",
+  "segments.details.menu-button.export-segment-design.text": "Export Segment Design",
+  "segments.details.menu-button.delete-segment.text": "Delete Segment",
   "segments.members-add-members.text": "Add Member",
   "segments.members-placeholder-type.text": "Type",
   "segments.members-placeholder-id/name.text": "ID/Name",
