Segments Root Section Card Table + Data Fetch (#2280)
* Implement SegmentRootSectionCardTableComponent like FeatureFlagRootSectionCardTableComponent

* Add Show Global Excludes Slide Toggle to SegmentRootSectionCardComponent

* Updated SegmentRootSectionCardComponent to be similar to FeatureFlagRootSectionCardComponent

* Updated segments.model.ts to include SegmentsPaginationInfo

* Update Segments Root Table Column Header to App Context

* Removed unused code from segments.model.ts that will be needed later

* Set the segmentsRefreshToggle to false

* Add fetchSegmentsPaginated function to SegmentsDataService

* add new paginated segment call to new root list

* add spec fix

* change fetchSegments method naming

---------

Co-authored-by: danoswaltCL <doswalt@carnegielearning.com>

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -369,7 +369,7 @@
   "feature-flags.subtitle.text": "Create and manage feature flags",
   "feature-flags.link.text": "featureflags",
   "feature-flags.no-flags.text": "Welcome! <br> Let's start by creating a new flag!",
-  "feature-flags.no-flags-in-table.text": "No feature flags is defined. Create a new feature flag.",
+  "feature-flags.no-flags-in-table.text": "No feature flags defined. Create a new feature flag.",
   "feature-flags.no-matching-flags.text": "No matching feature flags found.",
   "feature-flags.delete-flag.message.text": "Type the name of feature flag to confirm deletion:",
   "feature-flags.delete-flag.input-placeholder.text": "Feature flag name",
@@ -436,13 +436,20 @@
   "segments.title.text": "Segments",
   "segments.subtitle.text": "Define new segments to include or exclude from any experiment",
   "segments.no-segments.text": "Welcome! <br> Let's start by creating a new segment!",
+  "segments.no-segments-in-table.text": "No segments defined. Create a new segment.",
+  "segments.no-matching-segments.text": "No matching segments found.",
+  "segments.show-global-excludes.text": "Show Global Excludes",
   "segments.add-segments.text": "ADD SEGMENT",
   "segments.import-segments.text": "IMPORT SEGMENT(S)",
   "segments.export-all-segments.text": "EXPORT ALL",
   "segments.global-name.text": "Name",
   "segments.global-status.text": "Status",
   "segments.global-last-update.text": "Last Update",
+  "segments.global-updated-at.text": "Updated at",
   "segments.global-context.text": "Context",
+  "segments.global-app-context.text": "App Context",
+  "segments.global-tags.text": "Tags",
+  "segments.global-lists.text": "Lists",
   "segments.global-description.text": "Description",
   "segments.global-members.text": "members",
   "segments.global-member.text": "Member(s)",
