Update translation keys to use strings from en.json file

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -454,7 +454,11 @@
   "segments.add-segments.text": "ADD SEGMENT",
   "segments.import-segments.text": "IMPORT SEGMENT(S)",
   "segments.export-all-segments.text": "EXPORT ALL",
+  "segments.global-type.text": "Type",
+  "segments.global-values.text": "Values",
   "segments.global-name.text": "Name",
+  "segments.global-enable.text": "Enable",
+  "segments.global-actions.text": "Actions",
   "segments.global-status.text": "Status",
   "segments.global-last-update.text": "Last Update",
   "segments.global-updated-at.text": "Updated at",
