Implement Add/Edit/Delete Segment List Modals

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -509,6 +509,9 @@
   "segments.import-segment-modal.compatibility-description.warning.text": "This JSON file can be imported, but it may contain outdated or missing properties/features. Please review the segment details post-import.",
   "segments.import-segment.error.message.text": "Invalid Segment JSON data",
   "segments.export-all-lists-design.confirmation-text.text": "Are you sure you want to export all lists (JSON)?",
+  "segments.upsert-list-modal.values-label.text": "Values",
+  "segments.upsert-list-modal.values-placeholder.text": "Values separated by commas",
+  "segments.upsert-list-modal.name-hint.text": "The name for this list.",
   "segments.details.lists.card.title.text": "Lists",
   "segments.details.lists.card.subtitle.text": "Define lists for this segment.",
   "segments.details.add-list.button.text": "Add List",
