--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -535,7 +535,7 @@
   "segments.segment-experiment-list-zeroState.text": "No Data",
   "segments.upsert-segment-modal.name-hint.text": "The name for this segment.",
   "segments.upsert-segment-modal.app-context-hint.text": "The App Context indicates the segment belongs to which context.",
-  "segments.upsert-segment-modal.app-context-warning.text": "Updating the App Context will clear the existing include and exclude lists.",
+  "segments.upsert-segment-modal.app-context-warning.text": "Updating the App Context will clear the existing lists.",
   "segments.upsert-segment-modal.tags-label.text": "Tags (optional)",
   "segments.upsert-segment-modal.tags-placeholder.text": "Tags separated by commas",
   "segments.delete-modal.warning-message.text": "Are you sure you want to delete ",
