Update SegmentOverviewDetailsSectionCardComponent to display different menu options for Global Excludes and also update corresponding modals

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -489,6 +489,9 @@
   "segments.details.menu-button.duplicate-segment.text": "Duplicate Segment",
   "segments.details.menu-button.export-segment-design.text": "Export Segment Design",
   "segments.details.menu-button.delete-segment.text": "Delete Segment",
+  "segments.details.menu-button.edit-global-exclude.text": "Edit Global Exclude",
+  "segments.details.menu-button.duplicate-global-exclude.text": "Duplicate Global Exclude",
+  "segments.details.menu-button.export-global-exclude-design.text": "Export Global Exclude",
   "segments.details.lists.menu-button.import-list.text": "Import List",
   "segments.details.lists.menu-button.export-lists.text": "Export All Lists",
   "segments.details.lists.menu-button.import-exclude-list.text": "Import Exclude List",
@@ -510,6 +513,8 @@
   "segments.global-members.segments-count-members-error.text": "Please have at least 1 valid member to move forward",
   "segments.export-segment-design.confirmation-title.text": "Export Segment",
   "segments.export-segment-design.confirmation-message.text": "Are you sure you want to export this segment (JSON)?",
+  "segments.export-global-exclude-design.confirmation-title.text": "Export Global Exclude",
+  "segments.export-global-exclude-design.confirmation-message.text": "Are you sure you want to export this Global Exclude (JSON)?",
   "segments.export-all-lists-design.confirmation-title.text": "Export All Lists",
   "segments.export-all-lists-design.confirmation-message.text": "Are you sure you want to export all lists (JSON)?",
   "segments.export-all-exclude-lists-design.confirmation-title.text": "Export All Exclude Lists",
