Refine Global Exclude Details Page Labels (#2426)
* Refine Global Exclude Details Page Labels

* Update SegmentOverviewDetailsSectionCardComponent to display different menu options for Global Excludes and also update corresponding modals

* Remove use of constants for modal titles

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -454,6 +454,7 @@
   "segments.add-segments.text": "ADD SEGMENT",
   "segments.import-segments.text": "IMPORT SEGMENT(S)",
   "segments.import-list-modal.title.text": "Import List",
+  "segments.import-exclude-list-modal.title.text": "Import Exclude List",
   "segments.import-list.message.text": "The List JSON file should include the required properties for it to be imported.",
   "segments.import-list-modal.compatibility-description.incompatible.text": "This JSON file cannot be imported because it lacks required properties or it incorrectly formatted for the segment list. Please ensure it is the correct file.",
   "segments.import-list-modal.compatibility-description.warning.text": "This JSON file can be imported, but it may contain outdated or missing properties/features. Please review the segment list details post-import.",
@@ -488,8 +489,13 @@
   "segments.details.menu-button.duplicate-segment.text": "Duplicate Segment",
   "segments.details.menu-button.export-segment-design.text": "Export Segment Design",
   "segments.details.menu-button.delete-segment.text": "Delete Segment",
+  "segments.details.menu-button.edit-global-exclude.text": "Edit Global Exclude",
+  "segments.details.menu-button.duplicate-global-exclude.text": "Duplicate Global Exclude",
+  "segments.details.menu-button.export-global-exclude-design.text": "Export Global Exclude",
   "segments.details.lists.menu-button.import-list.text": "Import List",
   "segments.details.lists.menu-button.export-lists.text": "Export All Lists",
+  "segments.details.lists.menu-button.import-exclude-list.text": "Import Exclude List",
+  "segments.details.lists.menu-button.export-exclude-lists.text": "Export All Exclude Lists",
   "segments.members-add-members.text": "Add Member",
   "segments.members-placeholder-type.text": "Type",
   "segments.members-placeholder-id/name.text": "ID/Name",
@@ -507,8 +513,12 @@
   "segments.global-members.segments-count-members-error.text": "Please have at least 1 valid member to move forward",
   "segments.export-segment-design.confirmation-title.text": "Export Segment",
   "segments.export-segment-design.confirmation-message.text": "Are you sure you want to export this segment (JSON)?",
-  "segments.export-all-segment-lists-design.confirmation-title.text": "Export All Segment Lists",
-  "segments.export-all-segment-lists-design.confirmation-message.text": "Are you sure you want to export all lists (JSON)?",
+  "segments.export-global-exclude-design.confirmation-title.text": "Export Global Exclude",
+  "segments.export-global-exclude-design.confirmation-message.text": "Are you sure you want to export this Global Exclude (JSON)?",
+  "segments.export-all-lists-design.confirmation-title.text": "Export All Lists",
+  "segments.export-all-lists-design.confirmation-message.text": "Are you sure you want to export all lists (JSON)?",
+  "segments.export-all-exclude-lists-design.confirmation-title.text": "Export All Exclude Lists",
+  "segments.export-all-exclude-lists-design.confirmation-message.text": "Are you sure you want to export all exclude lists (JSON)?",
   "segments.import-segment.text": "IMPORT SEGMENT",
   "segments.import-segment.message.text": "Select the JSON file(s) to import segments:",
   "segments.import-segment-modal.title.text": "Import Segment",
@@ -521,9 +531,11 @@
   "segments.upsert-list-modal.values-placeholder.text": "Values separated by commas",
   "segments.upsert-list-modal.name-hint.text": "The name for this list.",
   "segments.details.lists.card.title.text": "Lists",
-  "segments.details.lists.card.title.global-excludes.text": "Excluded Lists",
+  "segments.details.lists.card.title.global-excludes.text": "Exclude Lists",
+  "segments.details.lists.card.subtitle.global-excludes.text": "Define exclude lists for all experiments and feature flags.",
   "segments.details.lists.card.subtitle.text": "Define lists for this segment.",
   "segments.details.add-list.button.text": "Add List",
+  "segments.details.add-exclude-list.button.text": "Add Exclude List",
   "segments.details.lists.card.no-data-row.text": "No lists defined for this segment. Add a new list.",
   "segments.details.used-by.card.title.text": "Used By",
   "segments.details.used-by.card.subtitle.text": "View the list of experiments and feature flags that currently use this segment.",
