Remove 'Design' from Export menu options

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -404,7 +404,7 @@
   "feature-flags.details.add-exclude-list.button.text": "Add Exclude List",
   "feature-flags.details.menu-button.edit-flag.text": "Edit Feature Flag",
   "feature-flags.details.menu-button.duplicate-flag.text": "Duplicate Feature Flag",
-  "feature-flags.details.menu-button.export-flag-design.text": "Export Feature Flag Design",
+  "feature-flags.details.menu-button.export-flag-design.text": "Export Feature Flag",
   "feature-flags.details.menu-button.email-data.text": "Email Feature Flag Data",
   "feature-flags.details.menu-button.delete-flag.text": "Delete Feature Flag",
   "feature-flags.details.menu-button.archive.text": "Archive Feature Flag",
@@ -487,7 +487,7 @@
   "segments.overview.segment-app-context.text": "App Context",
   "segments.details.menu-button.edit-segment.text": "Edit Segment",
   "segments.details.menu-button.duplicate-segment.text": "Duplicate Segment",
-  "segments.details.menu-button.export-segment-design.text": "Export Segment Design",
+  "segments.details.menu-button.export-segment-design.text": "Export Segment",
   "segments.details.menu-button.delete-segment.text": "Delete Segment",
   "segments.details.menu-button.edit-global-exclude.text": "Edit Global Exclude",
   "segments.details.menu-button.duplicate-global-exclude.text": "Duplicate Global Exclude",
