--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -66,7 +66,7 @@
   "home-global.assignment-algorithm.text": "Assignment Algorithm",
   "home-global.stratification-factor.text": "Stratification Factor",
   "home-global.inclusion-criteria.text": "Inclusion Criteria",
-  "home-global.post-experiment-rule.text": "Post Rule",
+  "home-global.post-experiment-rule.text": "POST RULE",
   "home-global.post-experiment-rule.default.text": "default",
   "home-global.post-experiment-rule.assign.text": "assign",
   "home-global.enrollments-per-custom.text": " per ",
@@ -82,7 +82,7 @@
   "home.experiment-query-result.main-effect.title.text": "Main Effect",
   "home.experiment-query-result.interaction-effect.title.text": "Interaction",
   "home.experiments-table.text.name": "NAME",
-  "home.experiments-table.text.created-date": "CREATED ON",
+  "home.experiments-table.text.updated-date": "UPDATED AT",
   "home.experiments-table.text.context": "CONTEXT",
   "home.experiments-table.text.enrollment": "ENROLLMENT",
   "home.experiments-table.name-tooltip.text": "Experiment name",
@@ -229,7 +229,7 @@
   "home.view-experiment.export-warning.text": "The experiment data will be sent to '{{ email }}'.",
   "home.view-experiment.export-csv-warning.text": "*CSV export of multiple experiments is not allowed.",
   "home.view-experiment.created-on.text": "CREATED ON: ",
-  "home.view-experiment.last-updated-on.text": "LAST UPDATED ON: ",
+  "home.view-experiment.updated-at.text": "UPDATED AT: ",
   "home.view-experiment.ending-criteria.text": "ENDING CRITERIA",
   "home.view-experiment.ending-criteria.and.text": "and ",
   "home.view-experiment.ending-criteria.students.text": " student(s)  ",
@@ -467,7 +467,6 @@
   "segments.global-segments.title.text": "Global Excludes",
   "segments.global-segments.subtitle.text": "View the list of segments to be excluded globally.",
   "segments.global-status.text": "Status",
-  "segments.global-last-update.text": "Last Update",
   "segments.global-updated-at.text": "Updated at",
   "segments.global-context.text": "Context",
   "segments.global-app-context.text": "App Context",
