--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -537,7 +537,7 @@
   "segments.details.add-exclude-list.button.text": "Add Exclude List",
   "segments.details.lists.card.no-data-row.text": "No lists defined for this segment. Add a new list.",
   "segments.details.used-by.card.title.text": "Used By",
-  "segments.details.used-by.card.subtitle.text": "View the list of experiments and feature flags that currently use this segment.",
+  "segments.details.used-by.card.subtitle.text": "View the list of experiments, feature flags, and segments that currently use this segment.",
   "segments.details.used-by.card.no-data-row.text": "This segment is currently not being used by any experiments or feature flags.",
   "segments.segment-experiment-list-title.text": "Used by ({{ numberOfUses }}) ",
   "segments.segment-experiment-list-name.text": "Name",
