Implement experiment root section card component

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -355,6 +355,9 @@
   "profile.action.filter-metric.text": "Filter Metric",
   "experiments.title.text": "Experiments",
   "experiments.subtitle.text": "Create and analyze experiments",
+  "experiments.add-experiment.text": "Add Experiment",
+  "experiments.import-experiment.text": "Import Experiment",
+  "experiments.export-all-experiments.text": "Export All Experiment Designs",
   "feature-flags.details-created-on.text": "Created on: ",
   "feature-flags.details-updated-at.text": "Updated at: ",
   "feature-flags.global-name.text": "Name",
