Implement experiment root section card table component

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -353,8 +353,16 @@
   "profile.new-user.add-btn.text": "ADD",
   "profile.action.authorization.text": "Authorization",
   "profile.action.filter-metric.text": "Filter Metric",
+  "experiments.global-name.text": "Name",
+  "experiments.global-status.text": "Status",
+  "experiments.global-updated-at.text": "Updated at",
+  "experiments.global-app-context.text": "App Context",
+  "experiments.global-tags.text": "Tags",
+  "experiments.global-enrollment.text": "Enrollment",
   "experiments.title.text": "Experiments",
   "experiments.subtitle.text": "Create and analyze experiments",
+  "experiments.no-experiments-in-table.text": "No experiments defined. Create a new experiment.",
+  "experiments.no-matching-experiments.text": "No matching experiments found.",
   "experiments.add-experiment.text": "Add Experiment",
   "experiments.import-experiment.text": "Import Experiment",
   "experiments.export-all-experiments.text": "Export All Experiment Designs",
