--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -308,9 +308,9 @@
   "logs.audit-log-feature-flag-design-exported.text": "Successfully exported design of ",
   "logs.audit-log-feature-flag-state-changed.text": "Successfully changed status from {{ previousState }} to {{ newState }} in ",
   "logs.audit-log-feature-flag-updated-filterMode-changed.text": "The include all filter has been {{status}}.",
-  "logs.audit-log-feature-flag-updated-list-created.text": "The {{ listTableType }} list {{listName}} has been added.",
-  "logs.audit-log-feature-flag-updated-list-deleted.text": "The {{ listTableType }} list {{listName}} has been deleted.",
-  "logs.audit-log-feature-flag-updated-list-updated.text": "The {{ listTableType }} list {{listName}} has been updated.",
+  "logs.audit-log-list-created.text": "The {{ listTableType }} list {{listName}} has been added.",
+  "logs.audit-log-list-deleted.text": "The {{ listTableType }} list {{listName}} has been deleted.",
+  "logs.audit-log-list-updated.text": "The {{ listTableType }} list {{listName}} has been updated.",
   "logs.audit-log-feature-flag-updated-list-state-changed.text": "The {{ listTableType }} list {{listName}} has been {{status}}.",
   "users-global.text": "Participant",
   "users.main-heading.text": "Participants",
