--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -366,6 +366,24 @@
   "experiments.add-experiment.text": "Add Experiment",
   "experiments.import-experiment.text": "Import Experiment",
   "experiments.export-all-experiments.text": "Export All Experiment Designs",
+  "experiments.upsert-experiment-modal.name-hint.text": "The name for this experiment.",
+  "experiments.upsert-experiment-modal.app-context-hint.text": "The App Context indicates where the experiment will run, known to UpGrade.",
+  "experiments.upsert-experiment-modal.app-context-warning.text": "Updating the App Context will clear the existing include and exclude lists.",
+  "experiments.upsert-experiment-modal.experiment-type-simple-description.text": "Conditions are independent.",
+  "experiments.upsert-experiment-modal.experiment-type-factorial-description.text": "Conditions vary on two or more dimensions.",
+  "experiments.upsert-experiment-modal.unit-of-assignment-individual-description.text": "Condition will be assigned individually.",
+  "experiments.upsert-experiment-modal.unit-of-assignment-group-description.text": "Condition will be assigned by group (e.g., school, class, teacher).",
+  "experiments.upsert-experiment-modal.group-type-hint.text": "Select the group type for group-based assignment.",
+  "experiments.upsert-experiment-modal.consistency-rule-individual-description.text": "Individual students have a consistent experience.",
+  "experiments.upsert-experiment-modal.consistency-rule-group-description.text": "All students in a group have a common experience.",
+  "experiments.upsert-experiment-modal.condition-order-random-description.text": "Conditions are presented in randomized order with no fixed pattern or sequence.",
+  "experiments.upsert-experiment-modal.condition-order-random-round-robin-description.text": "Conditions are presented in a different randomized sequence each round.",
+  "experiments.upsert-experiment-modal.condition-order-ordered-round-robin-description.text": "Conditions are presented in the same fixed sequence each round.",
+  "experiments.upsert-experiment-modal.assignment-algorithm-random-description.text": "Each participant has an equal chance of being assigned to any condition.",
+  "experiments.upsert-experiment-modal.assignment-algorithm-stratified-random-sampling-description.text": "Random assignment within balanced subgroups to ensure representation.",
+  "experiments.upsert-experiment-modal.stratification-factor-hint.text": "Select a stratification factor for balanced random assignment.",
+  "experiments.upsert-experiment-modal.tags-label.text": "Tags (optional)",
+  "experiments.upsert-experiment-modal.tags-placeholder.text": "Tags separated by commas",
   "feature-flags.details-created-on.text": "Created on: ",
   "feature-flags.details-updated-at.text": "Updated at: ",
   "feature-flags.global-name.text": "Name",
