--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -384,6 +384,49 @@
   "experiments.upsert-experiment-modal.stratification-factor-hint.text": "Select a stratification factor for balanced random assignment.",
   "experiments.upsert-experiment-modal.tags-label.text": "Tags (optional)",
   "experiments.upsert-experiment-modal.tags-placeholder.text": "Tags separated by commas",
+  "experiments.delete-modal.warning-message.text": "Are you sure you want to delete ",
+
+  "experiments.details.edit-experiment.menu-item.text": "Edit Experiment",
+  "experiments.details.duplicate-experiment.menu-item.text": "Duplicate Experiment",
+  "experiments.details.export-experiment-design.menu-item.text": "Export Experiment Design",
+  "experiments.details.email-experiment-data.menu-item.text": "Email Experiment Data",
+  "experiments.details.delete-experiment.menu-item.text": "Delete Experiment",
+  "experiments.details.archive-experiment.menu-item.text": "Archive Experiment",
+
+  "experiments.details.decision-points.card.title.text": "Decision Points",
+  "experiments.details.decision-points.card.subtitle.text": "Define decision points for this experiment.",
+  "experiments.details.add-decision-point.button.text": "Add Decision Point",
+  "experiments.details.import-decision-point.menu-item.text": "Import Decision Point",
+  "experiments.details.export-all-decision-points.menu-item.text": "Export All Decision Points",
+  "experiments.details.conditions.card.title.text": "Conditions",
+  "experiments.details.conditions.card.subtitle.text": "Define conditions for this experiment.",
+  "experiments.details.add-condition.button.text": "Add Condition",
+  "experiments.details.import-condition.menu-item.text": "Import Condition",
+  "experiments.details.export-all-conditions.menu-item.text": "Export All Conditions",
+  "experiments.details.inclusions.card.no-data-row.text": "No include lists defined. No participants will be enrolled in the experiment.",
+  "experiments.details.inclusions.card.title.text": "Include Lists",
+  "experiments.details.inclusions.include-all.toggle.text": "Include All",
+  "experiments.details.inclusions.card.subtitle.text": "Define include lists for this experiment.",
+  "experiments.details.add-include-list.button.text": "Add Include List",
+  "experiments.details.import-include-list.menu-item.text": "Import Include List",
+  "experiments.details.export-all-include-lists.menu-item.text": "Export All Include Lists",
+  "experiments.details.exclusions.card.no-data-row.text": "No exclude lists defined. No participants will be excluded from the included lists.",
+  "experiments.details.exclusions.card.title.text": "Exclude Lists",
+  "experiments.details.exclusions.card.subtitle.text": "Define exclude lists for this experiment.",
+  "experiments.details.add-exclude-list.button.text": "Add Exclude List",
+  "experiments.details.import-exclude-list.menu-item.text": "Import Exclude List",
+  "experiments.details.export-all-exclude-lists.menu-item.text": "Export All Exclude Lists",
+  "experiments.details.metrics.card.title.text": "Metrics",
+  "experiments.details.metrics.card.subtitle.text": "Define metrics to monitor for this experiment.",
+  "experiments.details.add-metric.button.text": "Add Metric",
+  "experiments.details.import-metric.menu-item.text": "Import Metric",
+  "experiments.details.export-all-metrics.menu-item.text": "Export All Metrics",
+  "experiments.details.enrollment-data.card.title.text": "Enrollment Data",
+  "experiments.details.enrollment-data.card.subtitle.text": "Enrollments reflect participants who have started the experiment.",
+  "experiments.details.export-enrollment-data.menu-item.text": "Export Enrollment Data",
+  "experiments.details.metrics-data.card.title.text": "Metrics Data",
+  "experiments.details.metrics-data.card.subtitle.text": "Metrics reflect participants who have provided data on the relevant metric.",
+  "experiments.details.export-metrics-data.menu-item.text": "Export Metrics Data",
   "feature-flags.details-created-on.text": "Created on: ",
   "feature-flags.details-updated-at.text": "Updated at: ",
   "feature-flags.global-name.text": "Name",
