Implement experiment details page (#2563)
* Implement experiment details page

* Remove mistake part

* Make experiment details page navigation work

* Update ExperimentOverviewDetailsSectionCardComponent and ExperimentDetailsPageContentComponent

* Refine selectExperimentOverviewDetails and update CommonTabbedSectionCardFooterComponent

* Refine experiment details section card components

* Refine en.json file

* Update UpsertExperimentModalComponent to send requests with valid experiment data

* Disable Factorial Experiment Type for v2

* Refactor nested ternaries

* Add strongly-typed DTO interfaces for experiment requests

* Update timeLog type in ExperimentStateTimeLogDTO

* Update ExperimentConditionPayloadDTO to match backend

* Remove redundant comments

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -370,7 +370,7 @@
   "experiments.upsert-experiment-modal.app-context-hint.text": "The App Context indicates where the experiment will run, known to UpGrade.",
   "experiments.upsert-experiment-modal.app-context-warning.text": "Updating the App Context will clear the existing include and exclude lists.",
   "experiments.upsert-experiment-modal.experiment-type-simple-description.text": "Conditions are independent.",
-  "experiments.upsert-experiment-modal.experiment-type-factorial-description.text": "Conditions vary on two or more dimensions.",
+  "experiments.upsert-experiment-modal.experiment-type-factorial-description.text": "Conditions vary on two or more dimensions. (Coming soon)",
   "experiments.upsert-experiment-modal.unit-of-assignment-individual-description.text": "Condition will be assigned individually.",
   "experiments.upsert-experiment-modal.unit-of-assignment-group-description.text": "Condition will be assigned by group (e.g., school, class, teacher).",
   "experiments.upsert-experiment-modal.group-type-hint.text": "Select the group type for group-based assignment.",
@@ -384,6 +384,47 @@
   "experiments.upsert-experiment-modal.stratification-factor-hint.text": "Select a stratification factor for balanced random assignment.",
   "experiments.upsert-experiment-modal.tags-label.text": "Tags (optional)",
   "experiments.upsert-experiment-modal.tags-placeholder.text": "Tags separated by commas",
+  "experiments.delete-modal.warning-message.text": "Are you sure you want to delete ",
+  "experiments.details.edit-experiment.menu-item.text": "Edit Experiment",
+  "experiments.details.duplicate-experiment.menu-item.text": "Duplicate Experiment",
+  "experiments.details.export-experiment-design.menu-item.text": "Export Experiment Design",
+  "experiments.details.email-experiment-data.menu-item.text": "Email Experiment Data",
+  "experiments.details.archive-experiment.menu-item.text": "Archive Experiment",
+  "experiments.details.delete-experiment.menu-item.text": "Delete Experiment",
+  "experiments.details.decision-points.card.title.text": "Decision Points",
+  "experiments.details.decision-points.card.subtitle.text": "Define decision points for this experiment.",
+  "experiments.details.add-decision-point.button.text": "Add Decision Point",
+  "experiments.details.import-decision-point.menu-item.text": "Import Decision Point",
+  "experiments.details.export-all-decision-points.menu-item.text": "Export All Decision Points",
+  "experiments.details.conditions.card.title.text": "Conditions",
+  "experiments.details.conditions.card.subtitle.text": "Define conditions for this experiment.",
+  "experiments.details.add-condition.button.text": "Add Condition",
+  "experiments.details.import-condition.menu-item.text": "Import Condition",
+  "experiments.details.export-all-conditions.menu-item.text": "Export All Conditions",
+  "experiments.details.inclusions.card.no-data-row.text": "No include lists defined. No participants will be enrolled in the experiment.",
+  "experiments.details.inclusions.card.title.text": "Include Lists",
+  "experiments.details.inclusions.include-all.toggle.text": "Include All",
+  "experiments.details.inclusions.card.subtitle.text": "Define include lists for this experiment.",
+  "experiments.details.add-include-list.button.text": "Add Include List",
+  "experiments.details.import-include-list.menu-item.text": "Import Include List",
+  "experiments.details.export-all-include-lists.menu-item.text": "Export All Include Lists",
+  "experiments.details.exclusions.card.no-data-row.text": "No exclude lists defined. No participants will be excluded from the included lists.",
+  "experiments.details.exclusions.card.title.text": "Exclude Lists",
+  "experiments.details.exclusions.card.subtitle.text": "Define exclude lists for this experiment.",
+  "experiments.details.add-exclude-list.button.text": "Add Exclude List",
+  "experiments.details.import-exclude-list.menu-item.text": "Import Exclude List",
+  "experiments.details.export-all-exclude-lists.menu-item.text": "Export All Exclude Lists",
+  "experiments.details.metrics.card.title.text": "Metrics",
+  "experiments.details.metrics.card.subtitle.text": "Define metrics to monitor for this experiment.",
+  "experiments.details.add-metric.button.text": "Add Metric",
+  "experiments.details.import-metric.menu-item.text": "Import Metric",
+  "experiments.details.export-all-metrics.menu-item.text": "Export All Metrics",
+  "experiments.details.enrollment-data.card.title.text": "Enrollment Data",
+  "experiments.details.enrollment-data.card.subtitle.text": "Enrollments reflect participants who have started the experiment.",
+  "experiments.details.export-enrollment-data.menu-item.text": "Export Enrollment Data",
+  "experiments.details.metrics-data.card.title.text": "Metrics Data",
+  "experiments.details.metrics-data.card.subtitle.text": "Metrics reflect participants who have provided data on the relevant metric.",
+  "experiments.details.export-metrics-data.menu-item.text": "Export Metrics Data",
   "feature-flags.details-created-on.text": "Created on: ",
   "feature-flags.details-updated-at.text": "Updated at: ",
   "feature-flags.global-name.text": "Name",
