--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -396,6 +396,11 @@
   "experiments.details.add-decision-point.button.text": "Add Decision Point",
   "experiments.details.import-decision-point.menu-item.text": "Import Decision Point",
   "experiments.details.export-all-decision-points.menu-item.text": "Export All Decision Points",
+  "experiments.details.decision-points.site.text": "Site",
+  "experiments.details.decision-points.target.text": "Target",
+  "experiments.details.decision-points.exclude-if-reached.text": "Exclude If Reached",
+  "experiments.details.decision-points.actions.text": "Actions",
+  "experiments.details.decision-points.card.no-data-row.text": "No include lists defined. No participants will be enrolled in the experiment.",
   "experiments.details.conditions.card.title.text": "Conditions",
   "experiments.details.conditions.card.subtitle.text": "Define conditions for this experiment.",
   "experiments.details.add-condition.button.text": "Add Condition",
