Implement conditions table component

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -400,25 +400,31 @@
   "experiments.details.decision-points.target.text": "Target",
   "experiments.details.decision-points.exclude-if-reached.text": "Exclude If Reached",
   "experiments.details.decision-points.actions.text": "Actions",
-  "experiments.details.decision-points.card.no-data-row.text": "No include lists defined. No participants will be enrolled in the experiment.",
+  "experiments.details.decision-points.card.no-data-row.text": "No decision points defined. Experiments require at least one decision point.",
   "experiments.details.conditions.card.title.text": "Conditions",
   "experiments.details.conditions.card.subtitle.text": "Define conditions for this experiment.",
   "experiments.details.add-condition.button.text": "Add Condition",
   "experiments.details.import-condition.menu-item.text": "Import Condition",
   "experiments.details.export-all-conditions.menu-item.text": "Export All Conditions",
-  "experiments.details.inclusions.card.no-data-row.text": "No include lists defined. No participants will be enrolled in the experiment.",
+  "experiments.details.conditions.condition.text": "Condition",
+  "experiments.details.conditions.payload.text": "Payload",
+  "experiments.details.conditions.payload.specific-to-decision-point.text": "Specific to Decision Point",
+  "experiments.details.conditions.weight.text": "Weight (%)",
+  "experiments.details.conditions.actions.text": "Actions",
+  "experiments.details.conditions.card.no-data-row.text": "No conditions defined. Simple experiments require conditions.",
   "experiments.details.inclusions.card.title.text": "Include Lists",
   "experiments.details.inclusions.include-all.toggle.text": "Include All",
   "experiments.details.inclusions.card.subtitle.text": "Define include lists for this experiment.",
   "experiments.details.add-include-list.button.text": "Add Include List",
   "experiments.details.import-include-list.menu-item.text": "Import Include List",
   "experiments.details.export-all-include-lists.menu-item.text": "Export All Include Lists",
-  "experiments.details.exclusions.card.no-data-row.text": "No exclude lists defined. No participants will be excluded from the included lists.",
+  "experiments.details.inclusions.card.no-data-row.text": "No include lists defined. No participants will be enrolled in the experiment.",
   "experiments.details.exclusions.card.title.text": "Exclude Lists",
   "experiments.details.exclusions.card.subtitle.text": "Define exclude lists for this experiment.",
   "experiments.details.add-exclude-list.button.text": "Add Exclude List",
   "experiments.details.import-exclude-list.menu-item.text": "Import Exclude List",
   "experiments.details.export-all-exclude-lists.menu-item.text": "Export All Exclude Lists",
+  "experiments.details.exclusions.card.no-data-row.text": "No exclude lists defined. No participants will be excluded from the included lists.",
   "experiments.details.metrics.card.title.text": "Metrics",
   "experiments.details.metrics.card.subtitle.text": "Define metrics to monitor for this experiment.",
   "experiments.details.add-metric.button.text": "Add Metric",
