Implement experiment metrics table component

--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -430,6 +430,11 @@
   "experiments.details.add-metric.button.text": "Add Metric",
   "experiments.details.import-metric.menu-item.text": "Import Metric",
   "experiments.details.export-all-metrics.menu-item.text": "Export All Metrics",
+  "experiments.details.metrics.metric.text": "Metric",
+  "experiments.details.metrics.statistic.text": "Statistic",
+  "experiments.details.metrics.display-name.text": "Display Name",
+  "experiments.details.metrics.actions.text": "Actions",
+  "experiments.details.metrics.card.no-data-row.text": "No metrics defined. No metrics will be monitored in the experiment.",
   "experiments.details.enrollment-data.card.title.text": "Enrollment Data",
   "experiments.details.enrollment-data.card.subtitle.text": "Enrollments reflect participants who have started the experiment.",
   "experiments.details.export-enrollment-data.menu-item.text": "Export Enrollment Data",
