--- a/frontend/projects/upgrade/src/assets/i18n/en.json
+++ b/frontend/projects/upgrade/src/assets/i18n/en.json
@@ -401,6 +401,9 @@
   "experiments.details.decision-points.exclude-if-reached.text": "Exclude If Reached",
   "experiments.details.decision-points.actions.text": "Actions",
   "experiments.details.decision-points.card.no-data-row.text": "No decision points defined. Experiments require at least one decision point.",
+  "experiments.upsert-decision-point-modal.site-hint.text": "The site indicates a place in the code where the condition will be assigned.",
+  "experiments.upsert-decision-point-modal.target-hint.text": "The target indicates the app component that will undergo the experiment.",
+  "experiments.upsert-decision-point-modal.exclude-if-reached-hint.text": "Exclude students who visited the decision point while the experiment is inactive.",
   "experiments.details.conditions.card.title.text": "Conditions",
   "experiments.details.conditions.card.subtitle.text": "Define conditions for this experiment.",
   "experiments.details.add-condition.button.text": "Add Condition",
